tests/mysql/ui-common/section_sql_missing_section_param.stderr
error: sql_forge!: parameter :id has no mapping
  --> tests/mysql/tmp-ui/section_sql_missing_section_param.rs:11:23
   |
11 |             #filter = " WHERE id = :id ",
   |                       ^^^^^^^^^^^^^^^^^^
